Hw8 testing (#1)
* <test> добавил тестов

Signed-off-by: Arthur Inzhilov <artur-inzhilov@mail.ru>

* <fix>

Signed-off-by: Arthur Inzhilov <artur-inzhilov@mail.ru>

* <refactor> переделал сво-ва на yaml

Signed-off-by: Arthur Inzhilov <artur-inzhilov@mail.ru>

* <feat> добавил docker

Signed-off-by: Arthur Inzhilov <artur-inzhilov@mail.ru>

* <fix> docker

Signed-off-by: Arthur Inzhilov <artur-inzhilov@mail.ru>

* update

Signed-off-by: Arthur Inzhilov <artur-inzhilov@mail.ru>

* <feat> добавил kafka

Signed-off-by: Arthur Inzhilov <artur-inzhilov@mail.ru>

* <feat> добавил feignclient

Signed-off-by: Arthur Inzhilov <artur-inzhilov@mail.ru>

* <feat> добавил свой стартер

Signed-off-by: Arthur Inzhilov <artur-inzhilov@mail.ru>

---------

Signed-off-by: Arthur Inzhilov <artur-inzhilov@mail.ru>